# TALK-AWS_EKS_ECS

./: README.md  diapositivas.md  presentation.md  pyproject.toml  talk.md
lab/: dnsmasq.conf  docker-compose.yml  nginx.conf
lab-01/: README.md
lab-03/: README.md
news/news/: .gitignore  schedule.py  settings.py
news/news/spiders/: .gitignore  news_spider.py
poetry-demo/: pyproject.toml
poetry-demo/tutorial/tutorial/spiders/: quotes_spider.py
